Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 3.0.0
============================

2023-00-00 Jose Kahan
	* src/parse.c
	When parse_old_html()called with cmp_msgid to check if the first
	message in the archive corresponds to the first one that is added,
	the comparition failed if the msgid had characters that had to be
	escaped inside xml comments.

	* src/{parse.c, struct.c, struct.h}
	In complex messages where a multipart/mixed had a message/rfc822 part,
	with the later having multipart/mixed parts, parsing the message could
	fail if there were one or more missing boundary end separators.

	* src/parse.c
	If a multipart/mixed attachment had a Content-Disposition header
	that didn't give a filename, the parser wasn't checking if the
	Content-Type header had a name attribute it could use for the
	attachment file.

	* src/print.c
	Although description strings for attachments are stored in UTF-8,
	they were not being converted to the prefered charset for message
	files, which lead to invalid chars appearing in messages

	* src/print.c
	Special chars in subjects in forwarded messages were not being
	escaped

        * config.guess, config.sub
        Updated from https://git.savannah.gnu.org/gitweb/?p=config.git

	* configure.ac, configure
	Rewrote the rules for supporting user-defined paths / system paths for
	the gdbm library

	* removed acconfig.h from FILES and from the repository.
	Not needed anymore by autoconf.

	* src{print.c, printfile.c, struct.c}
	Removed warnings, errors when compiling without iconv

	* src{*.c, *.h}
	Added missing copyright, GPL licence where needed
	Added protection against multiple includes of .h files

	* src/{hypermail.c, setup.c}, docs/{hypermail.html, hypermail.1,
	  hmrc.html, hmrc.4}
	Removed the -T option from the doc, the hypermail -h page and other
	places where the option was mentioned. This option
	was deprecated and removed in 2.2.25 but it was still documented.